[package]
name = "egui_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
bounded-vec-deque = "0.1.1"
chrono = "0.4.23"
tracing-subscriber = "0.3"
egui_dock = "0.2.1"
poll-promise = { version = "0.2.0", features = ["tokio"] }
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.25"
tracing = "0.1.37"
crossbeam-channel = "0.5.6"
anyhow = "1.0.66"
rumqttc = "*"