[package]
name = "egui_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
tracing-subscriber = "0.3"
egui_dock = "0.2.1"
smol = "1.3.0"
futures = "0.3.25"
tracing = "0.1.37"
crossbeam-channel = "0.5.6"
anyhow = "1.0.66"
flume = "0.10.14"
async-broadcast = "0.4.1"
egui_extras = "0.19.0"
itertools = "0.10.5"